testsuite/tests/properties/useless_bind/test.out
test.py:19: error: Useless bind of dynamic var 'dyn_node'
test.py:27: error: Useless bind of dynamic var 'dyn_node'
Code generation was successful
Done
